--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/7a2d8c7046.js"
       crossorigin="anonymous"
@@ -20,8 +23,71 @@
     />
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Web development course</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!--Header Section (Toolbar)-->
+    <header class="header">
+      <div
+        class="social-links container-fluid d-none d-md-flex flex-md-row justify-content-md-end gap-3 p-md-1"
+      >
+        <div class="contain m-lg-auto me-md-3 d-flex justify-content-end gap-4">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#">English</a>
+          <a href="#">My page</a>
+          <a href="#" class="logout">logout</a>
+        </div>
+      </div>
+    </header>
+    <nav class="navbar navbar-expand-md bg-light container-fluid">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand ms-lg-5" href="index.html"
+          ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
+        /></a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul
+            class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-center"
+          >
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Program</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about.html">Join</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about.html">Sponsor</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about.html">News</a>
+            </li>
+
+            <li class="nav-item ms-lg-5 ms-md-2">
+              <a href="#" class="nav-link campaign ms-lg-5 ms-md-2"
+                >More programs</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
