Add introductory section of home page and BS5 classes to style

--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
         </div>
       </div>
     </nav>
+
+     <main class="container-fluid px-0">
+      <section
+        class="intro container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5"
+      >
+        <div class="container-fluid">
+          <h2 class="greetings">"Hello! Sharing World"</h2>
+          <h1 class="main-heading">Creative Commons global summit<br />2015</h1>
+        </div>
+        <p class="intro-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum
+          dolor sit
+        </p>
+
+        <div class="event-date">
+          <h3 class="date">2015.10.15(THU) ~ 16(FRI)</h3>
+          <p class="text">
+            @National Museum of Korea, Art Centre Nabi and more
+          </p>
+        </div>
+      </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
