--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
     </nav>
 
-     <main class="container-fluid px-0">
+    <main class="container-fluid px-0">
       <section
         class="intro container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5"
       >
@@ -105,6 +105,126 @@
           </p>
         </div>
       </section>
+
+      <!--Programs Sections-->
+      <section
+        class="container-fluid programs-wrap d-flex flex-column flex-md-column flex-lg-column justify-content-center p-md-5 p-2 p-lg-5"
+      >
+        <div
+          class="container-fluid d-flex justify-content-center flex-column align-items-center my-4"
+        >
+          <h3 class="heading-secondary container-fluid text-center">
+            Main Program
+          </h3>
+          <span class="line"></span>
+        </div>
+        <div class="programs-container d-flex flex-column flex-lg-row gap-3">
+          <div
+            class="programs d-flex flex-row flex-md-column justify-content-center align-items-center"
+          >
+            <img
+              src="images/program_icon_01.png"
+              class="px-2 prog-images align-self-center"
+              alt="Lecture"
+            />
+            <h4 class="lecture px-2 align-self-center text-md-center">
+              Lecture
+            </h4>
+            <p
+              class="program-text px-2 px-md-0 align-self-center text-left w-100 text-md-center"
+            >
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Praesentium
+            </p>
+          </div>
+          <div
+            class="programs d-flex flex-row flex-md-column justify-content-center align-items-center"
+          >
+            <img
+              src="images/program_icon_02.png"
+              class="px-2 prog-images align-self-center"
+              alt="CC Exhibition"
+            />
+            <h4 class="lecture px-2 align-self-center text-md-center">
+              Exhibition
+            </h4>
+            <p
+              class="program-text px-2 px-md-0 align-self-center text-left w-100 text-md-center"
+            >
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Praesentium,
+            </p>
+          </div>
+          <div
+            class="programs d-flex flex-row flex-md-column justify-content-center align-items-center"
+          >
+            <img
+              src="images/program_icon_03.png"
+              class="px-2 prog-images align-self-center"
+              alt="Forum"
+            />
+            <h4 class="lecture px-2 align-self-center text-md-center">Forum</h4>
+            <p
+              class="program-text px-2 px-md-0 align-self-center text-left w-100 text-md-center"
+            >
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Praesentium,
+            </p>
+          </div>
+          <div
+            class="programs d-flex flex-row flex-md-column justify-content-center align-items-center"
+          >
+            <img
+              src="images/program_icon_04.png"
+              class="px-2 prog-images align-self-center"
+              alt="Workshop"
+            />
+            <h4 class="lecture px-2 align-self-center text-md-center">
+              Workshop
+            </h4>
+            <p
+              class="program-text px-2 px-md-0 align-self-center text-left w-100 text-md-center"
+            >
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Praesentium,
+            </p>
+          </div>
+          <div
+            class="programs d-flex flex-row flex-md-column justify-content-center align-items-center"
+          >
+            <img
+              src="images/program_icon_05.png"
+              class="px-2 prog-images align-self-center"
+              alt="CC Ignite"
+            />
+            <h4 class="lecture px-2 align-self-center text-md-center">
+              CC Ignite
+            </h4>
+            <p
+              class="program-text px-2 px-md-0 align-self-center text-left w-100 text-md-center"
+            >
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Praesentium,
+            </p>
+          </div>
+        </div>
+
+        <h4
+          class="container text-center w-75 my-3 h-lg d-flex align-items-center d-md-none justify-content-center join"
+        >
+          Join Our Web Development course
+        </h4>
+        <a href="#"
+          ><h4
+            class="container see-all-progs text-center w-75 mt-5 h-lg d-none align-items-center d-md-flex justify-content-center"
+          >
+            See the Whole Program
+          </h4>
+        </a>
+      </section>
+
+      
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
