Add collapse button with BS5 classes for Stylig

--- a/index.html
+++ b/index.html
@@ -278,6 +278,18 @@
           </div>
         </div>
       </section>
+
+      <!--Collapsing section-->
+      <button
+        class="see-more d-md-none d-flex justify-content-center align-items-center container my-3"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseExample"
+        aria-expanded="false"
+        aria-controls="collapseExample"
+      >
+        MORE
+      </button>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
