Add remainder of featured speaker section with BS5 classes

--- a/index.html
+++ b/index.html
@@ -291,7 +291,93 @@
         MORE
       </button>
 
-      
+      <div
+        class="collapse d-md-block container-fluid p-0"
+        id="collapseExample"
+      >
+      <div class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4">
+        <div class="card container-fluid d-flex flex-row my-4 border-0 mt-0 col-md-6">
+          <img
+            src="images/speaker_03.png"
+            class="card-img-top speakers w-25"
+            alt="Oswald"
+          />
+          <div class="card-body w-75 d-flex flex-column gap-2">
+            <h5 class="card-title">Yachai Benkler</h5>
+            <p class="card-text text-danger mb-0">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <span class="line"></span>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+
+        <div class="card container-fluid d-flex flex-row my-4 border-0 col-md-6">
+          <img
+            src="images/speaker_04.png"
+            class="card-img-top speakers w-25"
+            alt="Oswald"
+          />
+          <div class="card-body w-75 d-flex flex-column gap-2">
+            <h5 class="card-title">Yachai Benkler</h5>
+            <p class="card-text text-danger mb-0">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <span class="line"></span>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+
+        <div class="card container-fluid d-flex flex-row my-4 border-0 col-md-6">
+          <img
+            src="images/speaker_05.png"
+            class="card-img-top speakers w-25"
+            alt="Oswald"
+          />
+          <div class="card-body w-75 d-flex flex-column gap-2 border-0">
+            <h5 class="card-title">Yachai Benkler</h5>
+            <p class="card-text text-danger mb-0">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <span class="line"></span>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+
+        <div class="card container-fluid d-flex flex-row my-4 border-0 col-md-6">
+          <img
+            src="images/speaker_06.png"
+            class="card-img-top speakers w-25"
+            alt="Oswald"
+          />
+          <div class="card-body w-75 d-flex flex-column gap-2 border-0">
+            <h5 class="card-title">Yachai Benkler</h5>
+            <p class="card-text text-danger mb-0">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <span class="line"></span>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        </div>
+
+
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
