Add partner section and footer with BS5 classes for styling

--- a/index.html
+++ b/index.html
@@ -291,93 +291,154 @@
         MORE
       </button>
 
-      <div
-        class="collapse d-md-block container-fluid p-0"
-        id="collapseExample"
-      >
-      <div class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4">
-        <div class="card container-fluid d-flex flex-row my-4 border-0 mt-0 col-md-6">
-          <img
-            src="images/speaker_03.png"
-            class="card-img-top speakers w-25"
-            alt="Oswald"
-          />
-          <div class="card-body w-75 d-flex flex-column gap-2">
-            <h5 class="card-title">Yachai Benkler</h5>
-            <p class="card-text text-danger mb-0">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+      <div class="collapse d-md-block container-fluid p-0" id="collapseExample">
+        <div class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4">
+          <div
+            class="card container-fluid d-flex flex-row my-4 border-0 mt-0 col-md-6"
+          >
+            <img
+              src="images/speaker_03.png"
+              class="card-img-top speakers w-25"
+              alt="Oswald"
+            />
+            <div class="card-body w-75 d-flex flex-column gap-2">
+              <h5 class="card-title">Yachai Benkler</h5>
+              <p class="card-text text-danger mb-0">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <span class="line"></span>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="card container-fluid d-flex flex-row my-4 border-0 col-md-6"
+          >
+            <img
+              src="images/speaker_04.png"
+              class="card-img-top speakers w-25"
+              alt="Oswald"
+            />
+            <div class="card-body w-75 d-flex flex-column gap-2">
+              <h5 class="card-title">Yachai Benkler</h5>
+              <p class="card-text text-danger mb-0">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <span class="line"></span>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="card container-fluid d-flex flex-row my-4 border-0 col-md-6"
+          >
+            <img
+              src="images/speaker_05.png"
+              class="card-img-top speakers w-25"
+              alt="Oswald"
+            />
+            <div class="card-body w-75 d-flex flex-column gap-2 border-0">
+              <h5 class="card-title">Yachai Benkler</h5>
+              <p class="card-text text-danger mb-0">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <span class="line"></span>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="card container-fluid d-flex flex-row my-4 border-0 col-md-6"
+          >
+            <img
+              src="images/speaker_06.png"
+              class="card-img-top speakers w-25"
+              alt="Oswald"
+            />
+            <div class="card-body w-75 d-flex flex-column gap-2 border-0">
+              <h5 class="card-title">Yachai Benkler</h5>
+              <p class="card-text text-danger mb-0">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <span class="line"></span>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <footer
+          class="bg-dark text-center container-fluid programs-wrap d-flex flex-column flex-md-column flex-lg-column justify-content-center p-md-5 p-2 p-lg-5 my-4"
+        >
+          <div
+            class="partners heading container-fluid d-flex justify-content-center flex-column align-items-center my-4"
+          >
+            <h3 class="heading-secondary container-fluid text-center my4">
+              Partners
+            </h3>
             <span class="line"></span>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+          </div>
+
+          <div class="cont">
+            <img
+              class="partner-logo"
+              src="images/mozilla-1-logo-black-and-white.png"
+              alt="Mozilla logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/1024px-Google_2015_logo_colorless_mourning_period.svg.png"
+              alt="Google logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/naver-logo-black-and-white.png"
+              alt="Naver logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/1333877_airbnb-logo-angies-list-logo-white-png-download.png"
+              alt="airbnb logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/naver-logo-black-and-white.png"
+              alt="Naver logo"
+            />
+          </div>
+        </footer>
+        <div
+          class="container-fluid d-flex gap-4 flex-row flex-md-row flex-lg-row justify-content-center p-md-5 p-2 p-lg-5"
+        >
+          <a
+            href="index.html"
+            class="logo-link d-flex justify-content-end align-items-center"
+            ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
+          /></a>
+          <div class="w-75">
+            <h4>2015 Creative commons Korea, Some right reserved</h4>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum
+              quos voluptas sit iusto eum nostrum doloribus non, numquam
+              voluptatum?
             </p>
           </div>
         </div>
-
-        <div class="card container-fluid d-flex flex-row my-4 border-0 col-md-6">
-          <img
-            src="images/speaker_04.png"
-            class="card-img-top speakers w-25"
-            alt="Oswald"
-          />
-          <div class="card-body w-75 d-flex flex-column gap-2">
-            <h5 class="card-title">Yachai Benkler</h5>
-            <p class="card-text text-danger mb-0">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <span class="line"></span>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-
-        <div class="card container-fluid d-flex flex-row my-4 border-0 col-md-6">
-          <img
-            src="images/speaker_05.png"
-            class="card-img-top speakers w-25"
-            alt="Oswald"
-          />
-          <div class="card-body w-75 d-flex flex-column gap-2 border-0">
-            <h5 class="card-title">Yachai Benkler</h5>
-            <p class="card-text text-danger mb-0">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <span class="line"></span>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-
-        <div class="card container-fluid d-flex flex-row my-4 border-0 col-md-6">
-          <img
-            src="images/speaker_06.png"
-            class="card-img-top speakers w-25"
-            alt="Oswald"
-          />
-          <div class="card-body w-75 d-flex flex-column gap-2 border-0">
-            <h5 class="card-title">Yachai Benkler</h5>
-            <p class="card-text text-danger mb-0">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <span class="line"></span>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-        </div>
-
-
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
