Add logo section of about page with BS5 classes for styling

--- a/about.html
+++ b/about.html
@@ -120,6 +120,31 @@
         </div>
       </section>
 
+      <section
+        class="my-logo-section container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
+      >
+        <div class="title d-md-flex flex-md-column align-items-center gap-3">
+          <h3 class="text-center">
+            Creative Commons <br class="d-md-none" />Global Summit 2015 Logo
+          </h3>
+          <span class="line"></span>
+          <p class="text text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
+            excepturi officia voluptate possimus impedit natus enim ad? Ex,
+            minus aliquid!
+          </p>
+        </div>
+
+        <div class="my-about-logo d-flex justify-content-center">
+          <img
+            src="images/Ccsummit2015_logo.png"
+            alt="CC-logo"
+            class="cc-image"
+          />
+        </div>
+      </section>
+
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
