Add past event section of  about page with BS5 classes for styling

--- a/about.html
+++ b/about.html
@@ -144,6 +144,37 @@
         </div>
       </section>
 
+<section
+        class="CC-past-events container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
+      >
+        <div
+          class="title d-md-flex flex-column gap-2 justify-content-center align-items-center"
+        >
+          <h3 class="greetings text-center">See the past CC Global Summits</h3>
+          <span class="line"></span>
+          <p class="text text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
+            excepturi officia voluptate possimus
+          </p>
+        </div>
+        <div class="CC-logo d-flex flex-md-row flex-column gap-4">
+          <a href="" class="about-hover"
+            ><img
+              src="images/about_2013_hover.png"
+              alt="about 2013"
+              class="w-100"
+            />
+          </a>
+
+          <a href=" class" class="about-hover"
+            ><img
+              src="images/about_2011_hover.png"
+              alt="about 2011"
+              class="w-100"
+          /></a>
+        </div>
+      </section>
+
 
 
     <script
