--- a/about.html
+++ b/about.html
@@ -25,7 +25,6 @@
     <title>Web development about page</title>
   </head>
   <body>
-
     <!--Header Section (Toolbar)-->
     <header class="header">
       <div
@@ -144,7 +143,7 @@
         </div>
       </section>
 
-<section
+      <section
         class="CC-past-events container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
       >
         <div
@@ -175,7 +174,25 @@
         </div>
       </section>
 
-
+      <!--Footer-->
+      <div
+        class="container-fluid bg-dark d-flex gap-4 flex-row flex-md-row flex-lg-row justify-content-center p-md-5 p-2 p-lg-5"
+      >
+        <a
+          href="index.html"
+          class="logo-link d-flex justify-content-end align-items-center"
+          ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
+        /></a>
+        <div class="w-75">
+          <h4>2015 Creative commons Korea, Some right reserved</h4>
+          <p class="">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum
+            quos voluptas sit iusto eum nostrum doloribus non, numquam
+            voluptatum?
+          </p>
+        </div>
+      </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
