Link aboout page to home page

--- a/about.html
+++ b/about.html
@@ -68,13 +68,13 @@
               <a class="nav-link" href="#">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html">Join</a>
+              <a class="nav-link" href="about.html">Join</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html">Sponsor</a>
+              <a class="nav-link" href="#">Sponsor</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html">News</a>
+              <a class="nav-link" href="#">News</a>
             </li>
 
             <li class="nav-item ms-lg-5 ms-md-2">
