--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="nav-link" href="#">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html">Join</a>
+              <a class="nav-link" href="about.html">Join</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about.html">Sponsor</a>
