Link aboout page to home page

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
             class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-center"
           >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link active" aria-current="page" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Join</a>
+              <a class="nav-link" href="#">Join</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html">Sponsor</a>
+              <a class="nav-link" href="#">Sponsor</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html">News</a>
+              <a class="nav-link" href="#">News</a>
             </li>
 
             <li class="nav-item ms-lg-5 ms-md-2">
