--- a/about.html
+++ b/about.html
@@ -44,16 +44,19 @@
     <nav class="navbar navbar-expand-md bg-light container-fluid">
       <div class="container-fluid">
         <button
-          class="navbar-toggler"
+          class="navbar-toggler position-relative"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
+          id="button"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon" id="open"></span>
+          <span type="button" class="btn-close d-none" disabled aria-label="Close navbar-toggler-icon" id="close"></span>
         </button>
+
         <a class="navbar-brand ms-lg-5" href="index.html"
           ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
         /></a>
@@ -193,7 +196,7 @@
         </div>
       </div>
     </main>
-
+    <script src="Apps/dynamicHtml.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
