Add JavaScript to dynamically generate html and BS5 classes for Featured speaker section

--- a/index.html
+++ b/index.html
@@ -229,57 +229,8 @@
       <!--Featured speakers Section-->
       <section
         class="container-fluid cont d-flex flex-column gap-4 p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4"
-      >
-        <div
-          class="heading container-fluid d-flex justify-content-center flex-column align-items-center my-4"
-        >
-          <h3 class="heading-secondary container-fluid text-center">
-            Featured Speakers
-          </h3>
-          <span class="line"></span>
-        </div>
-        <div class="row">
-          <div class="card container-fluid d-flex flex-row border-0 col-md-6">
-            <img
-              src="images/speaker_01.png"
-              class="card-img-top speakers w-25"
-              alt="Oswald"
-            />
-            <div class="card-body w-75 d-flex flex-column gap-2">
-              <h5 class="card-title">Yachai Benkler</h5>
-              <p class="card-text text-danger mb-0">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <span class="line"></span>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-          <div
-            class="card container-fluid d-flex flex-row border-0 mb-0 col-md-6"
-          >
-            <img
-              src="images/speaker_02.png"
-              class="card-img-top speakers w-25"
-              alt="Oswald"
-            />
-            <div class="card-body w-75 d-flex flex-column gap-2">
-              <h5 class="card-title">Yachai Benkler</h5>
-              <p class="card-text text-danger mb-0">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <span class="line"></span>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-        </div>
+      id="speakers">
+        
       </section>
 
       <!--Collapsing section-->
@@ -295,94 +246,8 @@
       </button>
 
       <div class="collapse d-md-block container-fluid p-0" id="collapseExample">
-        <div class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4">
-          <div
-            class="card container-fluid d-flex flex-row my-4 border-0 mt-0 col-md-6"
-          >
-            <img
-              src="images/speaker_03.png"
-              class="card-img-top speakers w-25"
-              alt="Oswald"
-            />
-            <div class="card-body w-75 d-flex flex-column gap-2">
-              <h5 class="card-title">Yachai Benkler</h5>
-              <p class="card-text text-danger mb-0">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <span class="line"></span>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-
-          <div
-            class="card container-fluid d-flex flex-row my-4 border-0 col-md-6"
-          >
-            <img
-              src="images/speaker_04.png"
-              class="card-img-top speakers w-25"
-              alt="Oswald"
-            />
-            <div class="card-body w-75 d-flex flex-column gap-2">
-              <h5 class="card-title">Yachai Benkler</h5>
-              <p class="card-text text-danger mb-0">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <span class="line"></span>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-
-          <div
-            class="card container-fluid d-flex flex-row my-4 border-0 col-md-6"
-          >
-            <img
-              src="images/speaker_05.png"
-              class="card-img-top speakers w-25"
-              alt="Oswald"
-            />
-            <div class="card-body w-75 d-flex flex-column gap-2 border-0">
-              <h5 class="card-title">Yachai Benkler</h5>
-              <p class="card-text text-danger mb-0">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <span class="line"></span>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-
-          <div
-            class="card container-fluid d-flex flex-row my-4 border-0 col-md-6"
-          >
-            <img
-              src="images/speaker_06.png"
-              class="card-img-top speakers w-25"
-              alt="Oswald"
-            />
-            <div class="card-body w-75 d-flex flex-column gap-2 border-0">
-              <h5 class="card-title">Yachai Benkler</h5>
-              <p class="card-text text-danger mb-0">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <span class="line"></span>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
+        <div class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4" id="speakersection2">
+         
         </div>
         <footer
           class="bg-dark text-center container-fluid programs-wrap d-flex flex-column flex-md-column flex-lg-column justify-content-center p-md-5 p-2 p-lg-5 my-4"
