modified markup for home page

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
       <div class="collapse d-md-block container-fluid p-0" id="collapseExample">
         <div
-          class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4 "
+          class="row p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4 gy-3 "
           id="speakersection2"
         ></div>
         <footer
