--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
       <div
         class="social-links container-fluid d-none d-md-flex flex-md-row justify-content-md-end gap-3 p-md-1"
       >
-        <div class="contain m-lg-auto me-md-3 d-flex justify-content-end gap-4">
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#">English</a>
-          <a href="#">My page</a>
-          <a href="#" class="logout">logout</a>
-        </div>
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#">English</a>
+        <a href="#">My page</a>
+        <a href="#" class="logout me-2">logout</a>
       </div>
     </header>
     <nav class="navbar navbar-expand-md bg-light container-fluid">
@@ -65,9 +63,9 @@
         /></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
-            class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-center"
+            class="navbar-nav gap-3 mb-2 mb-lg-0 w-100 justify-content-between align-items-center"
           >
-            <li class="nav-item">
+            <li class="nav-item ms-md-auto">
               <a class="nav-link active" aria-current="page" href="about.html"
                 >About</a
               >
@@ -85,8 +83,8 @@
               <a class="nav-link" href="#">News</a>
             </li>
 
-            <li class="nav-item ms-lg-5 ms-md-2">
-              <a href="#" class="nav-link campaign ms-lg-5 ms-md-2"
+            <li class="nav-item ms-md-auto">
+              <a href="#" class="nav-link campaign"
                 >More programs</a
               >
             </li>
