Update markup to change content in home page

--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
         class="intro container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5"
       >
         <div class="container-fluid">
-          <h2 class="greetings">"Hello! Sharing World"</h2>
-          <h1 class="main-heading">Creative Commons global summit<br />2015</h1>
+          <h1 class="greetings">The Web Developer Bootcamp 2022</h1>
+          <img src="images/Blog-2-2.png" class="w-100 d-md-none" alt="Bootcamp banner">
+          <img src="images/Blog-2-2.png" class="w-75 d-none d-md-block" alt="Bootcamp banner">
         </div>
         <p class="intro-text">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum
-          dolor sit
+          Welcome to our 2022 web development Boot camp. The only course you need to learn web development - HTML, CSS, JS, Node, and More!
         </p>
 
         <div class="event-date">
-          <h3 class="date">2015.10.15(THU) ~ 16(FRI)</h3>
+          <h3 class="date"> Starting on the (THU)15.10.2022 ~ 16(FRI)</h3>
           <p class="text">
-            @National Museum of Korea, Art Centre Nabi and more
+            @National polytechnic of Douala, Amphi theatre 250
           </p>
         </div>
       </section>
