Update markup to change content in home page

--- a/about.html
+++ b/about.html
@@ -181,16 +181,16 @@
 
       <!--Footer-->
       <div
-        class="container-fluid bg-dark d-flex gap-4 flex-row flex-md-row flex-lg-row justify-content-center p-md-5 p-2 p-lg-5"
+        class="container-fluid bg-dark d-flex gap-4 flex-row justify-content-center p-2"
       >
         <a
           href="index.html"
           class="logo-link d-flex justify-content-end align-items-center"
           ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
         /></a>
-        <div class="w-75">
-          <h4>2015 Creative commons Korea, Some right reserved</h4>
-          <p class="">
+        <div class="w-50">
+          <h4>2022 Web development BootCamp, Some right reserved</h4>
+          <p >
             Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum
             quos voluptas sit iusto eum nostrum doloribus non, numquam
             voluptatum?
