--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
             </li>
 
             <li class="nav-item ms-md-auto">
-              <a href="#" class="nav-link campaign"
-                >More programs</a
-              >
+              <a href="#" class="nav-link campaign">More programs</a>
             </li>
           </ul>
         </div>
@@ -99,18 +97,25 @@
       >
         <div class="container-fluid">
           <h1 class="greetings">The Web Developer Bootcamp 2022</h1>
-          <img src="images/Blog-2-2.png" class="w-100 d-md-none" alt="Bootcamp banner">
-          <img src="images/Blog-2-2.png" class="w-75 d-none d-md-block" alt="Bootcamp banner">
+          <img
+            src="images/Blog-2-2.png"
+            class="w-100 d-md-none"
+            alt="Bootcamp banner"
+          />
+          <img
+            src="images/Blog-2-2.png"
+            class="w-75 d-none d-md-block"
+            alt="Bootcamp banner"
+          />
         </div>
         <p class="intro-text">
-          Welcome to our 2022 web development Boot camp. The only course you need to learn web development - HTML, CSS, JS, Node, and More!
+          Welcome to our 2022 web development Boot camp. The only course you
+          need to learn web development - HTML, CSS, JS, Node, and More!
         </p>
 
         <div class="event-date">
-          <h3 class="date"> Starting on the (THU)15.10.2022 ~ 16(FRI)</h3>
-          <p class="text">
-            @National polytechnic of Douala, Amphi theatre 250
-          </p>
+          <h3 class="date">Starting on the (THU)15.10.2022 ~ 16(FRI)</h3>
+          <p class="text">@National polytechnic of Douala, Amphi theatre 250</p>
         </div>
       </section>
 
@@ -122,7 +127,7 @@
           class="container-fluid d-flex justify-content-center flex-column align-items-center my-4"
         >
           <h3 class="heading-secondary container-fluid text-center">
-            Main Program
+            What you will learn
           </h3>
           <span class="line"></span>
         </div>
@@ -135,14 +140,12 @@
               class="px-2 prog-images align-self-center"
               alt="Lecture"
             />
-            <h4 class="lecture px-2 align-self-center text-md-center">
-              Lecture
-            </h4>
+            <h4 class="lecture px-2 align-self-center text-md-center">HTML5</h4>
             <p
               class="program-text px-2 px-md-0 align-self-center text-left w-75 text-md-center mb-0 pb-2"
             >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Praesentium
+              The ins and outs of HTML5. Create responsive, accessible, and
+              beautiful layouts to have a better design
             </p>
           </div>
           <div
@@ -154,13 +157,13 @@
               alt="CC Exhibition"
             />
             <h4 class="lecture px-2 align-self-center text-md-center">
-              Exhibition
+              CSS3/BS5
             </h4>
             <p
               class="program-text px-2 px-md-0 align-self-center text-left w-75 text-md-center mb-0 pb-2"
             >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Praesentium,
+              Use CSS Frameworks including Bootstrap 5, Semantic UI, and Bulma
+              to facilitate the process of web development
             </p>
           </div>
           <div
@@ -171,12 +174,14 @@
               class="px-2 prog-images align-self-center"
               alt="Forum"
             />
-            <h4 class="lecture px-2 align-self-center text-md-center">Forum</h4>
+            <h4 class="lecture px-2 align-self-center text-md-center">
+              JavaScript
+            </h4>
             <p
               class="program-text px-2 px-md-0 align-self-center text-left w-75 text-md-center mb-0 pb-2"
             >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Praesentium,
+              Use JavaScript variables, conditionals, loops, functions, arrays,
+              and objects. Manipulate the DOM with vanilla JS
             </p>
           </div>
           <div
@@ -188,13 +193,13 @@
               alt="Workshop"
             />
             <h4 class="lecture px-2 align-self-center text-md-center">
-              Workshop
+              NodeJS
             </h4>
             <p
               class="program-text px-2 px-md-0 align-self-center text-left w-75 text-md-center mb-0 pb-2"
             >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Praesentium,
+              Use NodeJS to write server-side JavaScript. Write a REAL
+              application using everything in the course to improve your skills
             </p>
           </div>
           <div
@@ -206,13 +211,12 @@
               alt="CC Ignite"
             />
             <h4 class="lecture px-2 align-self-center text-md-center">
-              CC Ignite
+              MongoDB
             </h4>
             <p
               class="program-text px-2 px-md-0 align-self-center text-left w-75 text-md-center mb-0 pb-2"
             >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Praesentium,
+              Use Express and MongoDB to create full-stack JS applications in other to master the back end in web development 
             </p>
           </div>
         </div>
@@ -222,9 +226,9 @@
         >
           Join Our Web Development course
         </h4>
-        <a href="#"
+        <a href="#" class="w-50 mt-5 align-self-center"
           ><h4
-            class="container see-all-progs text-center w-75 mt-5 h-lg d-none align-items-center d-md-flex justify-content-center"
+            class="container see-all-progs text-center w-75 d-none d-md-flex justify-content-center"
           >
             See the Whole Program
           </h4>
@@ -239,7 +243,7 @@
 
       <!--Collapsing section-->
       <button
-        class="see-more d-md-none d-flex justify-content-center align-items-center container my-3"
+        class="see-more w-75 d-md-none d-flex justify-content-center align-items-center container my-3"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#collapseExample"
@@ -295,16 +299,16 @@
           </div>
         </footer>
         <div
-          class="container-fluid d-flex gap-4 flex-row flex-md-row flex-lg-row justify-content-center p-md-5 p-2 p-lg-5"
+          class="container-fluid d-flex gap-4 flex-row justify-content-center p-2"
         >
           <a
             href="index.html"
             class="logo-link d-flex justify-content-end align-items-center"
             ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
           /></a>
-          <div class="w-75">
-            <h4>2015 Creative commons Korea, Some right reserved</h4>
-            <p class="">
+          <div class="w-50">
+            <h4>2022 Web development BootCamp, Some right reserved</h4>
+            <p >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum
               quos voluptas sit iusto eum nostrum doloribus non, numquam
               voluptatum?
