Update markup to change content in about page

--- a/about.html
+++ b/about.html
@@ -98,11 +98,17 @@
         <div
           class="container-fluid d-md-flex flex-md-column align-items-center gap-3"
         >
-          <h2 class="greetings text-center">"Hello! Sharing World"</h2>
-          <h1 class="main-heading text-center">
-            Creative Commons<br />
-            global summit 2015
-          </h1>
+          <h1 class="greetings">The Web Developer Bootcamp 2022</h1>
+          <img
+            src="images/Blog-2-2.png"
+            class="w-100 d-md-none"
+            alt="Bootcamp banner"
+          />
+          <img
+            src="images/Blog-2-2.png"
+            class="w-75 d-none d-md-block"
+            alt="Bootcamp banner"
+          />
           <span class="line"></span>
         </div>
         <p class="intro-text about-intro-text text-center">
@@ -120,7 +126,7 @@
             excepturi officia voluptate possimus impedit natus enim ad? Ex,
             minus aliquid!
           </p>
-          <h3>CCSummit2015@Douala</h3>
+          <h3>WebDevBootCamp2022@Douala</h3>
         </div>
       </section>
 
@@ -154,7 +160,7 @@
         <div
           class="title d-md-flex flex-column gap-2 justify-content-center align-items-center"
         >
-          <h3 class="greetings text-center">See the past CC Global Summits</h3>
+          <h3 class="text-center">See the past Wed Development Bootcamp</h3>
           <span class="line"></span>
           <p class="text text-center">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
