Fix all linter errors

--- a/about.html
+++ b/about.html
@@ -53,10 +53,7 @@
         >
           <span class="navbar-toggler-icon" id="open"></span>
           <span
-            type="button"
-            class="btn-close d-none"
-            disabled
-            aria-label="Close navbar-toggler-icon"
+            class="btn-close d-none navbar-toggler-icon Close"
             id="close"
           ></span>
         </button>
