--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
         >
           <span class="navbar-toggler-icon" id="open"></span>
           <span
-            type="button"
-            class="btn-close d-none"
-            disabled
-            aria-label="Close navbar-toggler-icon"
+            class="btn-close d-none navbar-toggler-icon Close"
             id="close"
           ></span>
         </button>
@@ -236,10 +233,10 @@
       </section>
 
       <!--Featured speakers Section-->
-      <section
+      <div
         class="container-fluid cont d-flex flex-column gap-4 p-md-2 p-lg-5 p-2 pb-md-4 pb-lg-4"
         id="speakers"
-      ></section>
+      ></div>
 
       <!--Collapsing section-->
       <button
