Add project information in readMe.md file and Add MIT licence

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Program</a>
+              <a class="nav-link" href="#prog">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Join</a>
+              <a class="nav-link" href="#join">Join</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sponsor</a>
+              <a class="nav-link" href="#partners">Sponsor</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">News</a>
@@ -119,7 +119,7 @@
       <!--Programs Sections-->
       <section
         class="container-fluid programs-wrap d-flex flex-column flex-md-column flex-lg-column justify-content-center p-md-5 p-2 p-lg-5"
-      >
+      id="prog">
         <div
           class="container-fluid d-flex justify-content-center flex-column align-items-center my-4"
         >
@@ -218,13 +218,13 @@
           </div>
         </div>
 
-        <h4
-          class="container text-center w-75 my-3 h-lg d-flex align-items-center d-md-none justify-content-center join"
+        <a
+          class="container join-prog text-decoration-none text-center w-75 my-3 h-lg d-flex align-items-center d-md-none justify-content-center join"
         >
-          Join Our Web Development course
-        </h4>
+          <h4>Join Our Web Development course</h4>
+        </a>
         <a href="#" class="w-50 mt-5 align-self-center"
-          ><h4
+           id="join"><h4
             class="container see-all-progs text-center w-75 d-none d-md-flex justify-content-center"
           >
             See the Whole Program
@@ -260,7 +260,7 @@
         >
           <div
             class="partners heading container-fluid d-flex justify-content-center flex-column align-items-center my-4"
-          >
+          id="partners">
             <h3 class="heading-secondary container-fluid text-center my4">
               Partners
             </h3>
